--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p id="sub_home_para">Student at <span style="color: rgb(0, 172, 240);">Haldia Institute of
                         Technology</span>, Haldia. Pursuing <span style="color: rgb(240, 0, 188);">B.Tech.</span> degree
                     in the field of <span style="color: rgb(0, 212, 0);">Computer Science and Engineering</span>. Goal
-                    is to become a <span style="color: rgb(229, 255, 0);">Professioal Developer</span>. Also interested
+                    is to become a <span style="color: rgb(229, 255, 0);">Professional Developer</span>. Also interested
                     in Creative Project Building with team at different levels, topics. Hobby is Drawing, Craft.</p>
             </div>
             <img src="greater_than.png" id="home_para_img_2">
@@ -90,7 +90,7 @@
                 &emsp;&emsp; func <span style="color: rgb(229, 255, 0);"> coding( )</span> { <br>
                 &emsp;&emsp;&emsp;&emsp;language_know = <span style="color: rgb(0, 212, 0);"> 'C, Python, Java,
                     JavaScript, HTML, XML, CSS'</span> <br>
-                &emsp;&emsp;&emsp;&emsp;development <span style="color: rgb(0, 212, 0);"> 'Front End Web,
+                &emsp;&emsp;&emsp;&emsp;development = <span style="color: rgb(0, 212, 0);"> 'Front End Web,
                     Android'</span> <br>
                 &emsp;&emsp;} <br>
                 &emsp;&emsp; func <span style="color: rgb(229, 255, 0);"> communication( )</span> { <br>
