--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" media="screen and (max-width: 900px)" href="phone.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <!-- <link rel="stylesheet" media="(min-width: 700px) and (max-width: 1200px)" href="phone_desktop.css"> -->
 
 
